# Local-MCP

./: .env.example  .gitignore  README.md  client.py  pyproject.toml  requirements.txt  vllm.sh  vllm_vlm.sh
Experiments/: exp.md  exp2.md  exp3.md  exp_question.md
servers/: db_server.py  filesystem_server.py  markitdown_server.py  math_server.py  parent_rag_server.py
